Padding bug on mobile fixed with word-break.

--- a/StylusCompiler/stylus/style.styl
+++ b/StylusCompiler/stylus/style.styl
@@ -14,6 +14,7 @@ body
 	margin-top 50px
 	margin-bottom 30px
 	font-family Source Sans Pro
+	word-break break-word
 
 .arabic
 	font-family Noto Kufi Arabic
